test/errors/recursive_struct_type.haste
const S = struct { x: S; };
